feat: :sparkles: added bookings multiples
